The board class is created and the method to get all elements

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Ping Pong por Juan Diego Loaiza Martinez.</h1>
+
+    <!--to draw elements-->
     <canvas id="canvas"></canvas>
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
