--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MVC</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Ping Pong por Juan Diego Loaiza Martinez.</h1>
